# AI-VenueFinder-miniProject

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/shortlists/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/shortlists/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  views.py
backend/apps/venues/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/venues/management/commands/: seed_venues.py
backend/apps/venues/migrations/: 0001_initial.py
backend/apps/venues/services/: ai_search.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
backend/tests/: conftest.py  test_shortlists.py  test_venues.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js  shortlist.js  venues.js
frontend/src/components/: AISearchBar.jsx  FilterBar.jsx  LoadingSpinner.jsx  Navbar.jsx  VenueCard.jsx  VenueDetailModal.jsx
frontend/src/pages/: AISearchPage.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx  ShortlistPage.jsx  VenueListPage.jsx
frontend/src/store/: authStore.js  shortlistStore.js
