[tool.poetry]
name = "venuefinder-backend"
version = "0.1.0"
description = "Venuefinder B2B venue discovery platform backend"
authors = ["Venuefinder Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
django-filter = "^23.5"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"
django-redis = "^5.4"
openai = "^1.0"
drf-spectacular = "^0.27"
django-environ = "^0.11"
gunicorn = "^21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.7"
factory-boy = "^3.3"
pytest-celery = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["tests/test_*.py"]
